[gd_scene load_steps=4 format=3 uid="uid://g0vf0e1hegw3"]

[ext_resource type="Texture2D" uid="uid://lyui542c83ya" path="res://ASSETS/windows/windows_border - Copy.png" id="1_14m5k"]
[ext_resource type="Script" path="res://SCENES/Sub/game_task_list/GAME_TASK 1/task_1_explanation_before.gd" id="1_qakxe"]
[ext_resource type="Theme" uid="uid://dpw6rugitmvrc" path="res://THEMES/TaskTitleTheme.tres" id="2_vnqqm"]

[node name="TaskExplanation" type="Node2D"]
script = ExtResource("1_qakxe")

[node name="WindowsBorder-Copy" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_14m5k")

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 120.0
offset_top = 168.0
offset_right = 1848.0
offset_bottom = 1056.0
theme = ExtResource("2_vnqqm")
theme_override_font_sizes/font_size = 112
text = "Learn to identify suspicious ads vs. legitimate ones. Trust your instincts and protect your clicks!"
autowrap_mode = 3

[node name="exit" type="Button" parent="."]
offset_left = 1792.0
offset_right = 1920.0
offset_bottom = 128.0

[node name="understand" type="Button" parent="."]
offset_left = 664.0
offset_top = 848.0
offset_right = 1221.0
offset_bottom = 959.0
theme_override_font_sizes/font_size = 75
text = "I UNDERSTAND"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="understand" to="." method="_on_understand_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
